# garage-discordbot

./: .dockerignore  .gitignore  .hadolint.yaml  .markdownlint.rb  .pre-commit-config.yaml  .pyre_configuration  .shellcheckrc  .yamllint.yaml  Makefile  README.md  main.py  pyproject.toml  sample.env
.github/: CONTRIBUTING.md  TODO.md
.github/workflows/: check-test.yaml  publish.yaml  pull-request.yaml
conf/: logger.yaml
dev/: Dockerfile  build.sh  check.sh  clean.sh  deps.sh  ghcr-login.sh  logger.sh  run.sh  scan.sh
docker/: Dockerfile  Dockerfile-test  docker-compose.yaml  sample.env  test-entrypoint.sh
kubernetes/: discordbot.yaml  sample.kustomization.yaml
lib/: __init__.py  api.py  bot.py  config_parser.py  logger_extras.py  logger_setup.py  utils.py
scripts/: build.sh  check.sh  clean.sh  deps.sh  ghcr-login.sh  logger.sh  run.sh  scan.sh  test.sh
tests/: test_utils.py
