[project]
name = "garage-discordbot"
version = "0.1.0"
description = "Discord bot for Jim's Garage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pylint>=3.3.4",
    "pyre>=1.12.5",
    "pyright>=1.1.394",
    "ruff>=0.9.7",
]
